# C-project-BedBug

./: CMakeLists.txt  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
GameLib/: Bug.cpp  Bug.h  BugCounterVisitor.cpp  BugCounterVisitor.h  BugGarbage.cpp  BugGarbage.h  BugMulti.cpp  BugMulti.h  BugNull.cpp  BugNull.h  BugRedundancy.cpp  BugRedundancy.h  BugVisitor.cpp  BugVisitor.h  CMakeLists.txt  CodeDlg.cpp  CodeDlg.h  FatBug.cpp  FatBug.h  FatGarbage.cpp  FatGarbage.h  FatNull.cpp  FatNull.h  Feature.cpp  Feature.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameView.cpp  GameView.h  Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  MainFrame.cpp  MainFrame.h  ObjectVisitor.cpp  ObjectVisitor.h  PlayArea.cpp  (+7 more)
Level/: level0.xml  level3.xml
Tests/: CMakeLists.txt  GameTest.cpp  ObjectTest.cpp  PlayAreaTest.cpp  VisitorTest.cpp
